--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
+    "server": "node index.js",
     "buildFront": "cd front && npm run build",
-    "start": "npm run buildFront && node index.js"
+    "start": "npm run buildFront && node index.js",
+    "install": "npm install && cd front && npm install"
   },
   "author": "",
   "license": "ISC",
