--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev": "nodemon index.js",
     "server": "node index.js",
     "buildFront": "cd front && npm run build",
-    "start": "npm run buildFront && node index.js",
-    "install": "npm install && cd front && npm install"
+    "start": "node index.js",
+    "install": "npm install && cd front && npm install && npm buildFront"
   },
   "author": "",
   "license": "ISC",
