--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "server": "node index.js",
-    "buildFront": "cd front && npm run build",
-    "start": "node index.js"
+    "buildFront": "cd front && npm install && npm run build",
+    "start": "node index.js",
+    "build": "npm install && buildFront"
   },
   "author": "",
   "license": "ISC",
