--- a/.envExample
+++ b/.envExample
@@ -15,3 +15,4 @@ MAILING_SERVICE_CLIENT_SECRET =
 MAILING_SERVICE_REFRESH_TOKEN = 
 MAILING_SERVICE_ACEESS_TOKEN = 
 SENDER_EMAIL_ADDRESS = 
+API_URL=url/api/v1
