--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": " set NODE_ENV=production && nodemon index.js",
+    "prod": " set NODE_ENV=production && nodemon index.js",
     "server": "node index.js",
     "build-font": "cd front && npm install && npm run build",
     "startProd": "set NODE_ENV=production && node index.js",
     "build": "npm install && npm run build-font",
-    "production": "set NODE_ENV=production && npm run build-font && npm run server"
+    "production": "set NODE_ENV=production && npm run build-font && npm run prod"
   },
   "author": "",
   "license": "ISC",
