--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " set NODE_ENV=production && nodemon index.js",
-    "prod": " set NODE_ENV=production && nodemon index.js",
-    "server": "node index.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "build-font": "cd front && npm install && npm run build",
-    "startProd": "set NODE_ENV=production && node index.js",
     "build": "npm install && npm run build-font",
-    "production": "set NODE_ENV=production && npm run build-font && npm run prod"
+    "production": "set NODE_ENV=production && npm run build && npm run start",
+    "startProd": "set NODE_ENV=production && node index.js"
   },
   "author": "",
   "license": "ISC",
