adding build prod

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build-production": "cd front && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm i && npm install && npm run build",
+    "build-production": "npm install && set NODE_ENV=production, cd front && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm install && npm run build",
     "build-dev": "cd front && npm install && npm run build",
     "install-build": "npm install && npm run build-dev",
     "production": "set NODE_ENV=production && npm run build && npm run start",
