--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build-production": "npm install && set NODE_ENV=production, cd front && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm install && npm run build",
     "build-dev": "cd front && npm install && npm run build",
     "install-build": "npm install && npm run build-dev",
-    "production": "set NODE_ENV=production && npm run build && npm run start",
+    "test-production": "set NODE_ENV=production && cd front && npm run build",
+    "build-production": "npm install && cd front && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm install && npm run build",
     "startProd": "set NODE_ENV=production && node index.js",
     "live": "set NODE_ENV=production && npm run build-production && npm run start"
   },
