edit build prod

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-dev": "cd front && npm install && npm run build",
     "install-build": "npm install && npm run build-dev",
     "test-production": "set NODE_ENV=production && cd front && npm run build",
-    "build-production": "npm install && cd front && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm install && npm run build",
+    "build-production": "npm install && cd front && npm install && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm run build",
     "startProd": "set NODE_ENV=production && node index.js",
     "live": "set NODE_ENV=production && npm run build-production && npm run start"
   },
