--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "init-dev": "npm install && cd front && npm install && set REACT_APP_API_URL='http://localhost:8000' && npm run build",
-    "build-dev": "cd front && set REACT_APP_API_URL='http://localhost:8000' && npm run build",
+    "init-dev": "npm install && cd front && npm install && set REACT_APP_API_URL=http://localhost:8000 && npm run build",
+    "build-dev": "cd front && set REACT_APP_API_URL=http://localhost:8000 && npm run build",
     "start-react": "cd front && set REACT_APP_API_URL 'http://localhost:8000' && npm start",
     "build-production": "npm install && cd front && npm install && set REACT_APP_API_URL='https://chat-odn3.onrender.com' && npm run build"
   },
