--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "emoji-picker-react": "^4.4.10",
     "framer-motion": "^10.13.1",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
