--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.10",
     "framer-motion": "^10.13.1",
+    "peerjs": "^1.4.7",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
@@ -33,6 +34,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.11",
     "timeago.js": "^4.0.2",
